# hello-tenstorrent

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
scripts/: basic.py  ttransform.py  working.py
scripts/mlp/: ref.py  ttmlp.py
scripts/phi1/: phi1.py  reference.py
